[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/coloc_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "coloc-tools"
version = "0.1.0"
description = "Python tools for colocalization analysis."
readme = "README.md"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "federico.gasparoli@gmail.com", name = "Federico Gasparoli" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["colocalization", "image-analysis", "thresholding", "costes", "microscopy"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tifffile",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
    "pre-commit-uv >=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/fdrgsp/coloc_tools"
Repository = "https://github.com/fdrgsp/coloc_tools"
Issues = "https://github.com/fdrgsp/coloc_tools/issues"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "F",    # flakes
    "W",    # warnings
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # tidy
    "TC",   # typecheck
]
ignore = [
    "D100", # Missing docstring in public module
    "D401", # First line should be in imperative mood
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = ["src/**/"]
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:distutils Version classes are deprecated",
    "ignore:Failed to disconnect:RuntimeWarning:",
    "ignore:'count' is passed as positional argument::vispy",
]

[tool.coverage.paths]
source = ["src/coloc_tools"]

[tool.coverage.run]
source = ["coloc_tools"]

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    "uv.lock",
    "tests/**/*",
    "examples/**/*",
]

[tool.typos.default]
extend-ignore-identifiers-re = ["thr"]